<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.score.ScoreActivity">

    <TextView
            android:text="@string/nome_do_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEventName"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btGoatHomeGol"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btGoalAway" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/casa"
            android:layout_width="0dp"
            style="@style/sub_title_game_wizard"
            android:layout_height="wrap_content"
            android:id="@+id/tvHome" app:layout_constraintStart_toStartOf="@+id/btGoatHomeGol"
            app:layout_constraintEnd_toEndOf="@+id/btGoatHomeGol" android:layout_marginEnd="8dp" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName" android:layout_marginTop="64dp"/>
    <TextView
            android:text="@string/visitante"
            style="@style/sub_title_game_wizard"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvGoalHome" app:layout_constraintEnd_toEndOf="@+id/btGoalAway"
            app:layout_constraintStart_toStartOf="@+id/btGoalAway"
            app:layout_constraintTop_toTopOf="@+id/tvHome"/>
    <TextView
            android:text="0"
            android:textSize="64sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGoadHome" app:layout_constraintStart_toStartOf="@+id/btGoatHomeGol"
            app:layout_constraintEnd_toEndOf="@+id/btGoatHomeGol" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHome" android:layout_marginTop="32dp"/>
    <TextView
            android:text="0"
            android:textSize="64sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGoatHomeGol2" app:layout_constraintStart_toStartOf="@+id/btGoalAway"
            app:layout_constraintEnd_toEndOf="@+id/btGoalAway" app:layout_constraintTop_toTopOf="@+id/btGoadHome"
    />
    <Button
            android:text="@string/gol"
            style="@style/custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btGoatHomeGol" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btGoalAway"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btGoadHome"/>
    <Button
            style="@style/custom_button"
            android:text="@string/gol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btGoalAway"
            app:layout_constraintStart_toEndOf="@+id/btGoatHomeGol" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginStart="14dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btGoatHomeGol2"/>
    <Button
            android:text="@string/reininciar_partida"
            style="@style/custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btRestart" app:layout_constraintStart_toStartOf="@+id/btGoatHomeGol"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/btGoalAway"
            android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btGoatHomeGol"/>
    <Button
            android:text="@string/finalizar_partida"
            style="@style/custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btEndGame" app:layout_constraintEnd_toEndOf="@+id/btGoalAway" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/btGoatHomeGol" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btRestart"/>
</androidx.constraintlayout.widget.ConstraintLayout>