<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.game.event.EventFragment">
    <TextView
            style="@style/title_game_wizard"
            android:text="@string/vamos_come_ar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            style="@style/sub_title_game_wizard"
            android:text="@string/qual_o_nome_do_evento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <EditText
            style="@style/imput_wizard"
            android:hint="Ex.:Final do Mundial de Clubes de 2019"
            android:ems="10"
            android:id="@+id/imputEvent"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/proximo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/custom_button"
            android:id="@+id/btNext" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imputEvent"
            app:layout_constraintEnd_toEndOf="@+id/imputEvent"
            app:layout_constraintStart_toStartOf="@+id/imputEvent"/>
</androidx.constraintlayout.widget.ConstraintLayout>