<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.game.hometeam.HomeTeamFragment">
    <TextView
            style="@style/title_game_wizard"
            android:text="Time da visitante"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/sub_title_game_wizard"
            android:text="@string/qual_o_time_adversario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_time_mandante" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            style="@style/imput_wizard"
            android:hint="@string/ex_liverpool"
            android:ems="10"
            android:id="@+id/id_edit_time_casa"
            app:layout_constraintStart_toStartOf="@+id/id_time_mandante"
            app:layout_constraintEnd_toEndOf="@+id/id_time_mandante" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/id_time_mandante"/>
    <Button
            style="@style/custom_button"
            android:text="@string/proximo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btNext" app:layout_constraintStart_toStartOf="@+id/id_edit_time_casa"
            app:layout_constraintEnd_toEndOf="@+id/id_edit_time_casa" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/id_edit_time_casa"/>
</androidx.constraintlayout.widget.ConstraintLayout>